# note-arduino

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  README.md  README.txt  index.html  keywords.txt  library.properties  n_atof.c  n_cjson.c  n_cjson.h  n_cjson_helpers.c  n_const.c  n_edge.h  n_ftoa.c  n_helpers.c  n_hooks.c  n_i2c.c  n_lib.h  n_md5.c  n_printf.c  n_request.c  n_serial.c  n_str.c  n_ua.c  note.h
docs/: CMakeLists.txt  Doxyfile.in  api.md  api_reference.rst  getting_started.rst  index.rst  library_initialization.rst
docs/_extensions/: doxyrunner.py
docs/html/: _notecard_8h.html  _notecard_8h__incl.map  _notecard_8h__incl.md5  _notecard_8h_source.html  annotated.html  class_notecard-members.html  class_notecard.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  functions.html  functions_func.html  graph_legend.html
docs/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  pages_0.js  searchdata.js
docs/xml/: _notecard_8cpp.xml  _notecard_8h.xml  class_notecard.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  index.xml  indexpage.xml
src/note-c/: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  n_atof.c  n_b64.c  n_cjson.c  n_cjson.h  n_cjson_helpers.c  n_cobs.c  n_const.c  n_edge.h  n_ftoa.c  n_helpers.c  n_hooks.c  n_i2c.c  n_lib.h  n_md5.c  n_printf.c  n_request.c  n_serial.c  n_str.c  n_ua.c  note.h
src/note-c/.devcontainer/: devcontainer.json
src/note-c/.devcontainer/ci/: Dockerfile  devcontainer.json
src/note-c/.github/actions/load-ci-image/: action.yml
src/note-c/.github/actions/run_unit_tests/: Dockerfile
src/note-c/.github/workflows/: ci.yml  notecard-binary-tests.yml  publish_docs_site.yml
src/note-c/docs/: CMakeLists.txt  Doxyfile.in  api_reference.rst  calling_the_notecard_api.rst  conf.py  index.rst  library_initialization.rst  ports.rst
src/note-c/scripts/: build_docs.sh  check_libc_dependencies.sh  check_runner_config.sh  run_astyle.sh  run_md5srv.sh  run_tunnelmole.sh  run_unit_tests.sh
src/note-c/test/: CMakeLists.txt
src/note-c/test/hitl/card.binary/: .gitignore  after_upload.py  platformio.ini
src/note-c/test/hitl/card.binary/lib/notecard_binary/: NotecardBinary.cpp  NotecardBinary.h  NotecardComms.cpp  NotecardComms.h  (+2 more)
src/note-c/test/hitl/card.binary/src/: main.cpp
src/note-c/test/hitl/card.binary/test/: README.md  test_binary_generators.cpp  test_binary_generators.h  test_card_binary.cpp  test_card_binary.h  test_main.cpp  test_unity_util.cpp  test_unity_util.h
src/note-c/test/hitl/scripts/: md5srv.py
src/note-c/test/include/: test_static.h
src/note-c/test/src/: JAddBinaryToObject_test.cpp  JAllocString_test.cpp  JBaseItemType_test.cpp  JBoolValue_test.cpp  JContainsString_test.cpp  JGetArray_test.cpp  JGetBinaryFromObject_test.cpp  JGetBool_test.cpp  JGetInt_test.cpp  JGetItemName_test.cpp  JGetNumber_test.cpp  JGetObject_test.cpp  JGetString_test.cpp  JGetType_test.cpp  JIsExactString_test.cpp  JIsNullString_test.cpp  JIsPresent_test.cpp  JItoA_test.cpp  JNumberValue_test.cpp  JSON_number_handling_test.cpp  JStringValue_test.cpp  JType_test.cpp  Jtolower_test.cpp  NoteAdd_test.cpp  NoteAuxSerialFlowControl_test.cpp  NoteBinaryCodecDecode_test.cpp  NoteBinaryCodecEncode_test.cpp  NoteBinaryCodecMaxDecodedLength_test.cpp  NoteBinaryCodecMaxEncodedLength_test.cpp  NoteBinaryStoreDecodedLength_test.cpp  NoteBinaryStoreEncodedLength_test.cpp  NoteBinaryStoreReceive_test.cpp  NoteBinaryStoreReset_test.cpp  NoteBinaryStoreTransmit_test.cpp  NoteClearLocation_test.cpp  NoteDebugSyncStatus_test.cpp  NoteDebug_test.cpp  NoteDebugf_test.cpp  NoteDelayMs_test.cpp  NoteFactoryReset_test.cpp  (+106 more)
test/: CMakeLists.txt  NoteI2c_Arduino.test.cpp  NoteLog_Arduino.test.cpp  NoteSerial_Arduino.test.cpp  NoteTxn_Arduino.test.cpp  Notecard.test.cpp  README.md  TestFunction.hpp  a.out  notecard-test.cpp  run_all_tests.sh  run_tests.sh
test/hitl/card.binary/: after_upload.py  platformio.ini  wait_for_test_port.py
test/hitl/card.binary/lib/notecard_binary/: NotecardBinary.cpp  NotecardBinary.h  NotecardComms.cpp  NotecardComms.h  small_img.cpp  small_img.h
test/hitl/card.binary/src/: main.cpp
test/hitl/card.binary/test/: LOCAL_TESTING.md  test_binary_generators.cpp  test_binary_generators.h  test_card_binary.cpp  test_card_binary.h  test_main.cpp  test_unity_util.cpp  test_unity_util.h
test/hitl/scripts/: md5srv.bats  md5srv.py  note.json
test/include/: test_static.h  time_mocks.h
test/mock/: MockI2c_Arduino.cpp  MockI2c_Arduino.hpp  MockLog_Arduino.cpp  MockLog_Arduino.hpp  MockSerial_Arduino.cpp  MockSerial_Arduino.hpp  NoteI2c_Mock.cpp  NoteI2c_Mock.hpp  NoteLog_Mock.cpp  NoteLog_Mock.hpp  NoteSerial_Mock.cpp  NoteSerial_Mock.hpp  NoteTime_Mock.cpp  NoteTime_Mock.hpp  NoteTxn_Mock.cpp  NoteTxn_Mock.hpp  mock-arduino.cpp  mock-arduino.hpp  mock-note-c-note.c  mock-note.c  mock-parameters.hpp
test/src/: JAddBinaryToObject_test.cpp  JAllocString_test.cpp  JAtoI_test.cpp  JAtoN_test.cpp  JBoolValue_test.cpp  JContainsString_test.cpp  JGetArray_test.cpp  JGetBinaryFromObject_test.cpp  JGetBool_test.cpp  JGetInt_test.cpp  JGetItemName_test.cpp  JGetNumber_test.cpp  JGetObject_test.cpp  JGetString_test.cpp  JGetType_test.cpp  JIntValue_test.cpp  JIsExactString_test.cpp  JIsNullString_test.cpp  JIsPresent_test.cpp  JItoA_test.cpp  JNtoA_test.cpp  JNumberValue_test.cpp  JPrintUnformatted_test.cpp  JSON_number_handling_test.cpp  JType_test.cpp  NoteAdd_test.cpp  NoteBinaryCodecDecode_test.cpp  NoteBinaryCodecEncode_test.cpp  NoteBinaryCodecMaxDecodedLength_test.cpp  NoteBinaryStoreDecodedLength_test.cpp  NoteBinaryStoreEncodedLength_test.cpp  NoteBinaryStoreReceive_test.cpp  NoteBinaryStoreTransmit_test.cpp  NoteClearLocation_test.cpp  NoteDebugSyncStatus_test.cpp  NoteDebug_test.cpp  NoteDebugf_test.cpp  NoteErrorClean_test.cpp  NoteFactoryReset_test.cpp  NoteFree_test.cpp  (+98 more)
(+121 files in other folders)
